--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,11 @@ spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# === Mailtrap SMTP Settings (para testes) ===
+spring.mail.host=smtp.mailtrap.io
+spring.mail.port=587
+spring.mail.username=Guilherme Do amaral pradines
+spring.mail.password=@iETMPuUMQ8dRfq7
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
