--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,9 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # === Mailtrap SMTP Settings (para testes) ===
-spring.mail.host=smtp.mailtrap.io
+spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=Guilherme Do amaral pradines
-spring.mail.password=@iETMPuUMQ8dRfq7
+spring.mail.username=gitmatch4@gmail.com
+spring.mail.password=fhfnuksghirkhlwv
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
