--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,7 @@ spring.mail.username=gitmatch4@gmail.com
 spring.mail.password=fhfnuksghirkhlwv
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+github.client.id= 
+github.client.secret= 
+github.redirect.uri=http://localhost:8080/api/oauth/github/callback
