--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,4 +15,6 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 github.client.id= 
 github.client.secret= 
-github.redirect.uri=http://localhost:8080/api/oauth/github/callback
+github.redirect.uri=exp://192.168.101.6:8081
+# http://localhost:8080/api/oauth/github/callback
+
